feat: Added ProductDB class
* Card ID: CCT-1377
* Implemented class for reading/writing productdb
* The productdb uses new file /var/lib/rhsm/productdb.json,
  because it is really JSON and not Javascript as it used to
  be in the past
* Implemented lot of unit tests for all methods using
  GoogleTest library: https://google.github.io/googletest/

Signed-off-by: Jiri Hnidek <jhnidek@redhat.com>

--- a/productid/CMakeLists.txt
+++ b/productid/CMakeLists.txt
@@ -7,7 +7,9 @@ endif()
 add_definitions(-DGETTEXT_DOMAIN=\"rhsm-dnf5-plugins\")
 
 # add your source files
-add_library(productid MODULE productid.cpp)
+add_library(productid MODULE productid.cpp
+        productdb.cpp
+        productdb.hpp)
 
 # disable the 'lib' prefix in order to create template.so
 set_target_properties(productid PROPERTIES PREFIX "")
@@ -17,3 +19,8 @@ target_link_libraries(productid PUBLIC dnf5)
 
 # install the plugin into the common libdnf5-plugins location
 install(TARGETS productid LIBRARY DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/libdnf5/plugins/")
+
+# Testing of productdb
+add_executable(test_productdb test_productdb.cpp productdb.cpp)
+target_link_libraries(test_productdb gtest jsoncpp)
+add_test(productdb test_productdb)
