--- a/.github/workflows/libdnf5.yml
+++ b/.github/workflows/libdnf5.yml
@@ -28,7 +28,7 @@ jobs:
       - name: "Install packages"
         run: |
           dnf --setopt install_weak_deps=False install -y \
-            cmake gcc gcc-c++ libdnf5-devel dnf5-devel
+            cmake gcc gcc-c++ libdnf5-devel dnf5-devel gtest-devel jsoncpp-devel
 
       - name: "Build libdnf5 plugins"
         run: |
