feat: Implement installing/removing of product certificate
* Card ID: CCT-1377
* Huge commit. It was not possible to split into several more
  logic commits, because everything is tangled and I had to
  do lot of experiments to get something working.
* When the product certificate is downloaded during transaction
  from RPM repository, then it is decompressed and it's ID
  is get from certificate extension. The ID is compared with the
  current list of installed certificates and if it is not installed
  yet, then it is installed to `/etc/pki/product`. Then this product
  is added to productdb database and corresponding repository
  is assigned to this product in the database.
* We also check if all repositories in productdb are still active.
  It means that at least one RPM package is installed from such
  repository. If the repository in productdb is not active, then
  the repository is removed from the database. Then if there is
  any product with empty list of repositories, then this product
  is removed from system
* Refactored productdb.cpp and product.hpp to work better with C++
  code. The previous implementation was influenced too much by
  original libdnf4 C code. Reading and writing to `productid.json`
  can throw some exceptions. These exceptions can be catched and
  used for logging, because logging is available only in methods
  of `ProductIdPlugin`
* Reading of productdb is more robust. It checks type of objects.
* The productdb is read at the beginning of post-transaction hook
  and it is write at the end of post-transaction hook
* Information about time spent in post-transaction hook is written
  to log. Everything is usually finished within 5 ms.
* Added new files `utils.cpp` and `utils.hpp` for code that is not
  dependent on `ProductIdPlugin` class and it is testable using
  unit tests written in `test_utils.cpp`
* Extended unit tests of productdb
* Added new testing product certificates 38091.pem and 908.pem
  for unit testing.
* Modified `CMakeF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,11 @@ if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     add_link_options(-Wl,--as-needed)
 endif()
 
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(OPENSSL REQUIRED IMPORTED_TARGET libcrypto libssl)
+
+# Enable testing in our project
+enable_testing()
+
 # libdnf5 plugins
 add_subdirectory("productid")
-
-enable_testing()
