fix(install): Added missing include
* Card ID: CCT-1377
* The plugin was installed to /libdnf5/plugins/ and the configuration
  file was installed to /dnf/libdnf5-plugins/ without this includ

Signed-off-by: Jiri Hnidek <jhnidek@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,9 @@ if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     add_link_options(-Wl,--as-needed)
 endif()
 
+# Install plugins to /usr/local/lib64/ by default
+include(GNUInstallDirs)
+
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(OPENSSL REQUIRED IMPORTED_TARGET libcrypto libssl)
 
